[package]
name = "como"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@fmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tokio-util = { version = "0.3", features = ["codec"] }
native-tls = "0.2"
tokio-native-tls = "0.1"
tracing-subscriber = "0.2"
bytes = "0.5"
byteorder = "1.3"
anyhow = "1.0"
futures = "0.3.5"
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }