[package]
name = "como"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@fmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-appender = "0.1"
#opentelemetry = "0.10.0"
#opentelemetry-jaeger = "0.9.0"
#tracing-attributes = "0.1.11"
#tracing-opentelemetry = "0.9.0"
native-tls = "0.2"
tokio-native-tls = "0.3"
tracing-subscriber = "0.2"
bytes = "1"
byteorder = "1"
anyhow = "1"
futures = "0.3"
config = "0.10"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"
sled = "0.34"
nom = "6.1.2"