[package]
name = "como"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@fmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-appender = "0.1.2"
#opentelemetry = "0.10.0"
#opentelemetry-jaeger = "0.9.0"
#tracing-attributes = "0.1.11"
#tracing-opentelemetry = "0.9.0"
native-tls = "0.2.7"
tokio-native-tls = "0.3.0"
tracing-subscriber = "0.2.16"
bytes = "1.0.1"
byteorder = "1"
anyhow = "1.0.38"
futures = "0.3.13"
config = "0.10.1"
bincode = "1.3.2"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.3"
sled = "0.34.6"
nom = "6.1.2"
