[package]
name = "como-mqtt"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["net"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
bytes = "1.0.1"
byteorder = "1.3"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
tracing = "0.1.25"
bincode = "1.3.2"
futures = "0.3.13"