[package]
name = "como"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@gmail.com>"]
edition = "2018"

[features]
default = ["mqtt", "tls"]
mqtt = ["como-mqtt"]
tls = ["native-tls", "tokio-native-tls"]
prometheus = ["opentelemetry", "opentelemetry-prometheus"]


[dependencies]
como-mqtt = { path = "../como-mqtt", optional = true }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-appender = "0.1.2"
opentelemetry = { version = "0.10.0", optional = true }
#opentelemetry-jaeger = "0.9.0"
#tracing-attributes = "0.1.11"
#tracing-opentelemetry = "0.9.0"
native-tls = { version = "0.2.7", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tracing-subscriber = "0.2.16"
bytes = "1.0.1"
byteorder = "1.3"
anyhow = "1.0.38"
futures = "0.3.13"
config = { version = "0.10.1", features = ["toml"] }
bincode = "1.3.2"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
sled = "0.34.6"
nom = "6.1.2"
opentelemetry-prometheus = { version = "0.5.0", optional = true }
