[package]
name = "como"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@gmail.com>"]
edition = "2018"

[features]
default = ["mqtt", "tls", "prometheus"]
mqtt = ["como-mqtt"]
tls = ["rustls", "tokio-rustls"]

[dependencies]
como-mqtt = { path = "../como-mqtt", optional = true }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-appender = "0.1.2"
warp = "0.3"
prometheus = { version = "0.12", features = ["process"], optional = true }
rustls = { version = "0.19.0", optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
#native-tls = { version = "0.2.7", optional = true }
#tokio-native-tls = { version = "0.3.0", optional = true }
tracing-subscriber = "0.2.16"
bytes = "1.0.1"
byteorder = "1.3"
anyhow = "1.0.38"
futures = "0.3.13"
config = { version = "0.10.1", features = ["toml"] }
bincode = "1.3.2"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
sled = "0.34.6"
nom = "6.1.2"
rand = "0.8.3"
chrono = "0.4.19"
lazy_static = "1.4"

[dev-dependencies]
claim = "0.5.0"
test-case = "1.1.0"

[package.metadata.deb]
assets = [
    ["target/release/como", "usr/bin/", "755"],
    ["../como.toml", "etc/", "644"],
    ["../README.md", "usr/share/doc/como/README", "644"],
]
conf-files = ["como.toml"]